--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   align-items: center;
 }
 
-.img-desktopStructure img {
+.img-desktop {
   height: 100%;
 }
 
@@ -142,7 +142,8 @@ form button:hover {
     justify-content: center;
   }
   
-  .img-desktop  {
+
+  .img-desktop {
     width: 100%;
   }
   .info {
@@ -163,5 +164,21 @@ form button:hover {
   .logo2 {
     display: block;
     padding: 30px;
+  }
+}
+
+
+@media (max-width: 500px) {
+  .info h1 {
+    margin-top: -150px;
+  }
+  .info {
+    margin-left: 10px;
+  }
+  .form input{
+    width: 200px;
+  }
+  form button {
+    right: 80px;
   }
 }
