--- a/style.css
+++ b/style.css
@@ -175,16 +175,22 @@ form button:hover {
 
 
 @media (max-width: 500px) {
+  .structure {
+    height: 90%;
+  }
   .info h1 {
     margin-top: -150px;
+  }
+  .info p {
+    margin-top: 30px;
   }
   .info {
     margin-left: 10px;
   }
   .form input{
-    width: 200px;
+    width: 300px;
   }
   form button {
-    right: 100px;
+    right: 35px;
   }
 }
